# MikanToAria2

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml  dockerfile  main.py  pyproject.toml  readme.md  requirements.txt  run.sh
config/: config.default.yml
